fwupd (1.8.2-1) unstable; urgency=medium

  * New upstream version (1.8.2)

 -- Mario Limonciello <superm1@gmail.com>  Mon, 11 Jul 2022 13:36:31 -0500

fwupd (1.8.1-2) unstable; urgency=medium

  * Fix mistake in symbols file
  * Fix gitignore

 -- Mario Limonciello <superm1@gmail.com>  Wed, 29 Jun 2022 20:01:43 -0500

fwupd (1.8.1-1) unstable; urgency=medium

  * New upstream version (1.8.1) (LP: #1979963)
  * Drop patch for systemd refresh unit, upstream.

 -- Mario Limonciello <superm1@gmail.com>  Thu, 28 Apr 2022 23:56:33 -0500

fwupd (1.7.7-1) unstable; urgency=medium

  * New upstream version (1.7.7)
    - Fixes some errors with TPM binary measurements. (LP: #1966364)
  * Backport configuration option for systemd refresh unit user
  * Run fwupd-refresh under a dedicated fwupd-refresh user (LP: #1969976)

 -- Mario Limonciello <superm1@gmail.com>  Mon, 25 Apr 2022 20:44:02 -0500

fwupd (1.7.6-1) unstable; urgency=medium

  * New upstream version (1.7.6)
  * Drop all patches, upstream
  * Add libqrtr-glib-dev to build depends

 -- Mario Limonciello <superm1@gmail.com>  Sun, 27 Feb 2022 20:59:36 -0600

fwupd (1.7.5-3) unstable; urgency=medium

  * debian/tests:
    - Disable blocking container virtualization only for autopkgtest

 -- Mario Limonciello <superm1@gmail.com>  Sat, 19 Feb 2022 07:21:22 -0600

fwupd (1.7.5-2) unstable; urgency=medium

  * Backport a series of patches that fix autopkgtest failures in Debian
    and Ubuntu.
  * Backport a patch to avoid running fwupd-refresh in containers.

 -- Mario Limonciello <superm1@gmail.com>  Fri, 18 Feb 2022 11:50:37 -0600

fwupd (1.7.5-1) unstable; urgency=medium

  * New upstream version (1.7.5)
    - Enable modem manager plugin by default
  * Drop efivar compatibility patch, upstream
  * backport a patch to fix dell wd19 TBT updates
  * backport a patch for community messaging issue
  * Backport a patch to allow falling back to signed binary if
    unsigned binary not present